Fix weekday label alignment problem

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@
   display: inline-block;
   font: 12px Avenir;
   margin-bottom: -20px;
+  margin-left: 10px;
   text-align: center;
 }
 
